HW/14.5.SecurityContext_NetworkPolicies/first_pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: first
  name: first
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first
  template:
    metadata:
      labels:
        app: first
    spec:
      containers:
        - image: praqma/network-multitool:alpine-extra
          name: network-multitool
