HW/14.5.SecurityContext_NetworkPolicies/second_pod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: second
  name: second
spec:
  replicas: 1
  selector:
    matchLabels:
      app: second
  template:
    metadata:
      labels:
        app: second
    spec:
      containers:
        - image: praqma/network-multitool:alpine-extra
          name: network-multitool
