HW/14.5.SecurityContext_NetworkPolicies/np_first.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-first
spec:
  podSelector: 
    matchLabels:
      app: first
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: second
