HW/14.5.SecurityContext_NetworkPolicies/np_second.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-second
spec:
  podSelector: 
    matchLabels:
      app: second 
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: first
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: first
